@@ -84,6 +84,7 @@ protected:
   bool onExit(const CEGUI::EventArgs&);
   bool onNetworkPlay(const CEGUI::EventArgs&);
   bool onLocalTest(const CEGUI::EventArgs&);
+  bool onOptions(const CEGUI::EventArgs&);
   bool overlayHandler(const CEGUI::EventArgs&);
 
 private:
@@ -106,6 +107,7 @@ private:
 
   NyiDialog* mNyiDialog;
   NyiDialog* mNyiLocalTest;
+  NyiDialog* mNyiOptions;
 };
 
 #endif // !_GAME_ENGINE_HPP_
